fixat scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,13 @@
   --grey: #D0D0D0;
 }
 
+html {
+  height: 100%;
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
 body {
   max-width: 500px;
   margin: 0 auto;
